<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.mymusicplayerapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/mainScreen"
            android:textColor="@color/white"
            android:textSize="@dimen/text_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/yoga">

            <Button
                android:id="@+id/yoga"
                style="@style/CategoryTextView"
                android:text="Yoga" />
        </RelativeLayout>


        <RelativeLayout
            style="@style/CategoryView"
            android:layout_height="270dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/freeletics">

            <Button
                android:id="@+id/freeletics"
                style="@style/CategoryTextView"
                android:text="@string/freeletics" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/CategoryView"
            android:layout_height="270dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/chill">

            <Button
                android:id="@+id/ChillOut"
                style="@style/CategoryTextView"
                android:text="@string/chill_out" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>