<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.android.mymusicplayerapp.YogaMusic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <TextView
            style="@style/DescriptionTextView"
            android:gravity="center"
            android:text="@string/ChillOutMusic" />

        <LinearLayout
            android:id="@+id/song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/dark"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/coverAlbumImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_music_note_white_36dp"
                android:tint="@color/colorAccent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_normal">

                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:id="@+id/playImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_play_arrow_white_36dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
